# plannerBackend

./: .gitignore  .pre-commit-config.yaml  LICENSE  PLAN.md  README.md  conftest.py  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
planner/: admin.py  views.py
planner/migrations/: 0001_add_todo_field.py  0002_add_subtask.py  0003_subtask_nullable.py
planner/models/subtask/: admin_subtask.py  subtask.py  test_subtask.py
planner/models/todo/: admin_todo.py  test_todo.py  todo.py
planner/serializers/: test_serializers.py  todo.py
planner/serializers/subtask/: subtask.py
planner/serializers/todo/: todo.py
planner/testing/: factories.py
planner/utils/: openai_api.py  openai_interface.py
planner/utils/testing/: test_openai_integration.py
three60Planner/: asgi.py  settings.py  urls.py  wsgi.py
