[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduler"
version = "0.0.1"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
    "django == 5.1.1",
    "djangorestframework == 3.15.2",
    "django-cors-headers == 4.6.0",
    "openai == 1.55.2",
]
description = "AI decomposition scheduler"
readme = "README.md"
license = {file = "LICENSE"}

classifiers = [

  "Development Status :: 1 - Planning",
  "Intended Audience :: Consumer",
  "Topic :: Task Planner :: Daily Life",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters
